fix routes add storage

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   crossorigin="anonymous"
     /> -->
 
-    <title>React App</title>
+    <title>What Da Food </title>
   </head>
   <body>
     <noscript>
